testdata/language-features/basic-list/list10.reject.out
type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ trace
!type error: can not unify
  /home/csaba/haskell/lambdacube-compiler/.stack-work/install/x86_64-linux/lts-10.4/8.2.2/share/x86_64-linux-ghc-8.2.2/lambdacube-compiler-0.6.1.0/lc/Internals.lc:58:6:
  data Int
       ^^^
with
  Float
in []
------------ tooltips
1:10-1:11
    _b
1:12-1:15
    Float
1:20-1:25
    Type
1:21-1:24
    Type